2022-09-19 (verze 3.0.0)
* kompletne novy addon kvuli zmenam na strance 
2022-05-07
* oprava kompatibility so starsou verziou requests
2022-04-04
 * make addon python 3.x compatible
2022-03-09 (misanov)
 * Uprava ziveho vysilani
2021-12-07 (misanov)
 * Uprava ziveho vysilani
 * Oprava nacitani Uvodni stranky
 * Nove info hlasky
2020-08-12
 * Pridano zive vysilani
2020-05-30
 * Drobne opravy
 * Zobrazuje se poslednich az 80 videi daneho poradu
2019-03-14
 * Zmena na webu Nova Plus (odkaz na porad vede rovnou na nejnovejsi dil)
2018-11-16
 * fix Han Solo (Enigma2) / thx Elring
﻿2018-09-18
 * opytaj sa boddieho :-)
2018-08-31
 * Fix prehravania epizod thx boddie
2018-08-26
 * Fix prehravania thx Elring (E2 rewrite thx boddie)
2017-10-25
 * Fix prehravania podla ab-forum uzivatela 'shiraz'
2016-05-20
 * Oprava prehravani
 * Oprava nahledu poradu
 * Zmena nazvu hlavniho adresare na Nejsledovanejsi
 * Update grafiky dle aktualniho vzhledu stranek Nova Plus
2015-11-21
 * Oprava prehravani
2015-06-11
 * Oprava prehravani
2014-10-25
 * Pridani statistik
2014-08-12
 * Oprava načítání kategorií
2014-03-15
 * Oprava prehravani
2014-02-04: 
 * Nova Plus (alpha) - first release
