@@ -1,4 +1,6 @@
-2022-09-19 (verze 3.0.0)
+2023-01-27 (verze 3.1)
+* kompletne novy addon kvuli zmenam na strance 
+2022-09-19 (verze 3.0)
 * kompletne novy addon kvuli zmenam na strance 
 2022-05-07
 * oprava kompatibility so starsou verziou requests
